--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="Movie List Bagas">
+    <meta property="og:description" content="Movie list for review film">
+    <meta property="og:image" content="https://vip-go.premiumbeat.com/wp-content/uploads/2015/10/Film-Production-Australia.jpg?resize=875,490">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
